fix(ticket): put correct badge color for active status on ticket page (#2863)
* revert: put back logic as it was

* test: refactor to rtl

* fix: remove z-index overflowing on scroll

--- a/src/pages/common/components/Avatar/Avatar.less
+++ b/src/pages/common/components/Avatar/Avatar.less
@@ -43,7 +43,6 @@
 
     .badge {
         position: absolute;
-        z-index: 2;
         width: 14px;
         height: 14px;
         border-radius: 50%;
